# teiq

./: .gitignore  README.md  configure.ac
src/: Makefile.am  teiq.c  xpath.c  xpath.h
